# FossBadge

./: .gitignore  GUIDELINES.md  PLAN_HOME.md  README.md  bashrc  cdc.md  celerybeat-schedule-shm  celerybeat-schedule-wal  db.sqlite3  docker-compose-prod.yml  docker-compose.yml  dockerfile  env_example  env_exemple  manage.py  pyproject.toml  roadmap.md  start.sh  start_dev.sh  tests_explanation.md  uv_commands.md
.junie/: guidelines.md
PLAN/: PLAN_HOME.md  README.md  phase-1b-vue-passeport.md  phase-1c-vue-badge.md  phase-1d-liens-focus.md  phase-2a-forger-badge.md  phase-2b-actions-lieu.md  phase-2c-actions-passeport.md  phase-2d-actions-badge.md  phase-4-badge-criteria.md
badge_generator/: admin.py  apps.py  illustrations.py  models.py  serializers.py  shapes.py  svg_engine.py  urls.py  views.py
badge_generator/migrations/: 0001_initial.py  0002_add_dome_fields.py  0003_remove_generatedbadge_pictogram_and_more.py  0004_auto_20260326_1143.py
badge_generator/templatetags/: badge_tags.py
core/: admin.py  context_processors.py  exceptions.py  forms.py  middlewares.py  models.py  permissions.py  tasks.py  tests.py  urls.py  validators.py  views.py
core/helpers/: __init__.py  mailer.py  token_helper.py  utils.py
core/migrations/: 0001_initial.py  0002_alter_badge_uuid_alter_badgeendorsement_uuid_and_more.py  0002_alter_structure_type.py  0003_remove_structure_latitude_remove_structure_longitude.py  0003_structure_admins.py  0004_badge_new_level_badge_type.py  0004_structure_editors.py  0005_auto_20260326_1136.py  0005_remove_badge_qr_code_remove_badge_qr_code_height_and_more.py  0006_alter_badgeassignment_unique_together.py  0006_remove_badge_level.py  0006_structure_marker.py  0007_remove_badge_valid_structures.py  (+18 more)
fossbadge/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
mapview/: models.py  urls.py  views.py
nginx/: django.conf
prompts/: phase-1a-vue-lieu.md  phase-3-bloc-recit.md  phase-5-nettoyage.md
temp-dependancies/: pyopenbadges-0.1.0-py3-none-any.whl
templates/: 403.html  404.html  base.html  show_message.html
tests/: tests_explanation.md
(+146 files in other folders)
