[project]
name = "fossbadge"
version = "0.1.0"
description = "Free and open source platform for Open Badge"
authors = [
    {name = "JonasFW13",email = "jturbeaux@pm.me"}
]
license = {text = "AGPLv3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2,<5.3)",
    "pillow (>=10)",
    "django-htmx (>=1)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
