[project]
name = "fossbadge"
version = "0.1.0"
description = "Free and open source platform for Open Badge"
authors = [{ name = "JonasFW13", email = "jturbeaux@pm.me" }]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "AGPLv3" }
dependencies = [
    "django (>=5.2,<5.3)",
    "pillow (>=10)",
    "django-htmx (>=1)",
    "djangorestframework (>=3.16,<4.0.0)",
    "django-pictures (>=1.4.2,<2.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13,<0.14",
    "django-extensions>=4.1,<5",
    "werkzeug>=3.1.3,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
